# ucv-ate-s4-SI

./: README.md
lab4_api_cv/: pyproject.toml
lab4_api_cv/src/lab4_api_cv/api/: main.py
lab4_api_cv/src/lab4_api_cv/services/: image_service.py
