[project]
name = "lab4-api-cv"
version = "0.1.0"
description = ""
authors = [
    {name = "N"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy (<2.0)",
    "opencv-python (<4.13)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "kedro (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
